--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Alison Cavuoti - Zendesk Administrator homepage</title>
+    <meta
+      name="description"
+      content="Everything you need to know about Alison Cavuoti and her expereince and expertise as a Care tool Engineer working on Zendesk platform"
+    />
+    <title>Alison Cavuoti - Care Tool Engineer homepage</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -41,10 +45,20 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About me</a>
+              <a
+                class="nav-link"
+                href="about.html"
+                title="My experience as a Care Tool Engineer"
+                >About me</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
+              <a
+                class="nav-link"
+                href="about.html#contact"
+                title="Drop me an email"
+                >Contact me</a
+              >
             </li>
           </ul>
         </div>
@@ -55,7 +69,12 @@
     <h3 class="text-center">Care Tools Engineer, based in London</h3>
     <div class="navigation-links mb-5">
       <a href="about.html#contact" class="primary-link">Contact me</a>
-      <a href="about.html" class="secondary-link">About me</a>
+      <a
+        href="about.html"
+        class="secondary-link"
+        title="Everything you need to know about me"
+        >About me</a
+      >
     </div>
     <div class="container">
       <div class="row">
