--- a/index.html
+++ b/index.html
@@ -68,7 +68,12 @@
     <h1 class="text-center">Alison Cavuoti Iglesias</h1>
     <h3 class="text-center">Care Tools Engineer, based in London</h3>
     <div class="navigation-links mb-5">
-      <a href="about.html#contact" class="primary-link">Contact me</a>
+      <a
+        href="about.html#contact"
+        class="primary-link"
+        title="Contact Alison via email"
+        >Contact me</a
+      >
       <a
         href="about.html"
         class="secondary-link"
@@ -79,7 +84,11 @@
     <div class="container">
       <div class="row">
         <div class="col-6">
-          <img src="images/yoga.png" class="img-fluid rounded" />
+          <img
+            src="images/yoga.png"
+            alt="Yoga Application"
+            class="img-fluid rounded"
+          />
         </div>
         <div class="col-6">
           <h2 class="mb-3">Yoga app</h2>
@@ -108,12 +117,20 @@
           </div>
         </div>
         <div class="col-6">
-          <img src="images/weather.png" class="img-fluid rounded" />
+          <img
+            src="images/weather.png"
+            alt="Weather Application"
+            class="img-fluid rounded"
+          />
         </div>
       </div>
       <div class="row mt-5">
         <div class="col-6">
-          <img src="images/yogurt.png" class="img-fluid rounded" />
+          <img
+            src="images/yogurt.png"
+            alt="Yogurt Application"
+            class="img-fluid rounded"
+          />
         </div>
         <div class="col-6">
           <h2 class="mb-3">Yogurt app</h2>
