--- a/about.html
+++ b/about.html
@@ -65,6 +65,7 @@
     </div>
     <div class="container">
       <div class="row">
+          <div class="ali-images"></div>
         <div class="col-sm-4">
           <img
             src="images/yoga.png"
@@ -85,6 +86,7 @@
             alt="Yogurt Application"
             class="img-fluid p-2 shadow rounded"
           />
+          </div>
         </div>
       </div>
     </div>
