--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
           <img
             src="images/yoga.png"
             alt="Yoga Application"
-            class="img-fluid rounded"
+            class="img-fluid rounded alison"
           />
         </div>
-        <div class="col-6">
+        <div class="col-sm-12 col-md-6">
           <h2 class="mb-3">Yoga app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -104,7 +104,7 @@
         </div>
       </div>
       <div class="row mt-5">
-        <div class="col-6">
+        <div class="col-sm-12 col-md-6">
           <h2 class="mb-3">Weather app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -120,7 +120,7 @@
           <img
             src="images/weather.png"
             alt="Weather Application"
-            class="img-fluid rounded"
+            class="img-fluid rounded alison"
           />
         </div>
       </div>
@@ -129,10 +129,10 @@
           <img
             src="images/yogurt.png"
             alt="Yogurt Application"
-            class="img-fluid rounded"
+            class="img-fluid rounded alison"
           />
         </div>
-        <div class="col-6">
+        <div class="col-sm-12 col-md-6">
           <h2 class="mb-3">Yogurt app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
